I'm going to scream to the top of my lungs.

--- a/styles.css
+++ b/styles.css
@@ -110,7 +110,7 @@ body {
 }
 
 .formbuilding .sightings {
-    display: blocl;
+    display: block;
     grid-template-columns: 1fr 3fr;
     list-style: none;
     margin: auto;
